--- a/nginx.conf
+++ b/nginx.conf
@@ -17,9 +17,17 @@ http {
     default_type  application/octet-stream;
 
     # GeoIP2
-    geoip2 /usr/share/geoip/GeoLite2-Country.mmdb {
-        $geoip2_data_country_code source=$remote_addr country iso_code;
-        $geoip2_data_country_name source=$remote_addr country names en;
+    geoip2 /usr/share/geoip/GeoLite2-City.mmdb {
+        $geoip2_city_country_code source=$remote_addr country iso_code;
+        $geoip2_city_country_name source=$remote_addr country names en;
+        $geoip2_city source=$remote_addr city names en;                
+        $geoip2_postal_code source=$remote_addr postal code;           
+        $geoip2_dma_code source=$remote_addr location metro_code;      
+        $geoip2_latitude source=$remote_addr location latitude;        
+        $geoip2_longitude source=$remote_addr location longitude;      
+        $geoip2_time_zone source=$remote_addr location time_zone;      
+        $geoip2_region_code source=$remote_addr subdivisions 0 iso_code;
+        $geoip2_region_name source=$remote_addr subdivisions 0 names en;
     }
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
@@ -30,7 +38,7 @@ http {
     log_format  main_geo  '$remote_addr - $remote_user [$time_local] "$request" '
                           '$status $body_bytes_sent "$http_referer" '
                           '"$http_user_agent" "$http_x_forwarded_for" '
-                          '$geoip2_data_country_code $geoip2_data_country_name';
+                          '$geoip2_city_country_code $geoip2_city_country_name';
 
     access_log  /var/log/nginx/access.log  main_geo; # GeoIP2
 
