--- a/nginx.vh.default.conf
+++ b/nginx.vh.default.conf
@@ -1,44 +1,35 @@
 server {
-    listen       80;
-    server_name  localhost;
+    listen 3000 default_server;
+    listen [::]:3000 default_server;
 
-    #charset koi8-r;
-    #access_log  /var/log/nginx/host.access.log  main;
+    real_ip_header    X-Forwarded-For;
+    set_real_ip_from  10.0.0.0/8;
+    deny              76.68.102.83;
+    allow             all;
 
+    set $env develop-;
+    set $appName peakactivity-web-frontend;
+    set $namespace peak-activity;
+
+    ## HTTP Redirect ##
+    if ($http_x_forwarded_proto = "http") {
+        return 301 https://$host$request_uri;
+    }
+
+    if ($host ~* ^www.(.*)) {
+        set $host_without_www $1;
+        rewrite ^(.*) https://$host_without_www$1 permanent;
+    }
+
+    # Handle the regular traffic
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
+      resolver            kube-dns.kube-system.svc.cluster.local;
+      proxy_set_header    Host $host;
+      proxy_set_header    X-Real-IP $remote_addr;
+      proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header    X-Forwarded-Proto $scheme;
+      proxy_set_header    X-Forwarded-Host $http_host;
+      proxy_pass          http://$env$appName.$namespace.svc.cluster.local:8080/;
+      proxy_read_timeout  90;
     }
-
-    #error_page  404              /404.html;
-
-    # redirect server error pages to the static page /50x.html
-    #
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }
-
-    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-    #
-    #location ~ \.php$ {
-    #    proxy_pass   http://127.0.0.1;
-    #}
-
-    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-    #
-    #location ~ \.php$ {
-    #    root           html;
-    #    fastcgi_pass   127.0.0.1:9000;
-    #    fastcgi_index  index.php;
-    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-    #    include        fastcgi_params;
-    #}
-
-    # deny access to .htaccess files, if Apache's document root
-    # concurs with nginx's one
-    #
-    #location ~ /\.ht {
-    #    deny  all;
-    #}
 }
